--- a/examples/general-example/four.tex
+++ b/examples/general-example/four.tex
@@ -6,7 +6,7 @@
           minimum width = 1.5cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
-    \node[] at (ms4.center) {ms2};
+    \node[] at (ms4.center) {\texttt{ms2}};
 
 
     %% \node[rectangle,
@@ -23,7 +23,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (c1) at (-1,1) {};
-    \node[] at (c1.center) {c\_c1};
+    \node[] at (c1.center) {\texttt{c\_c1}};
 
     \node[rectangle,
         draw,
@@ -31,19 +31,19 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (vc) at (1,1) {};
-    \node[] at (vc.center) {c\_c2};
+    \node[] at (vc.center) {\texttt{c\_c2}};
 
     \node[rectangle,
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (label) at (0,-1) {};
-    \node[] at (label.center) {a'};
+    \node[] at (label.center) {$a'$};
 
     \node[rectangle,
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (label) at (-2.5,1) {};
-    \node[] at (label.center) {$\to$};
+    \node[] at (label.center) {};
 
 
     \path[every node/.style={font=\sffamily\small}]
